Feature content added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
     <title>The Next Web - clone</title>
 </head>
 <body>
-    
+    <main>
+        <div class="wrapper">
+            <nav>
+                <ul>
+                    <li><a href="#">LATEST</a></li>
+                    <li><a href="#">HARD FORK</a></li>
+                    <li><a href="#">PLUGGED</a></li>
+                    <li><a href="#">FUNDAMENTALS</a></li>
+                    <li><a href="#">WORK 2030</a></li>
+                </ul>
+                <div class="search"></div>
+            </nav>
+        </div>
+        <div class="featur wrapper">
+            <div class="span-6-9">
+                <span class="overlay">
+                    <img src="#" alt="Logo overlay">
+                    <span>Wednesday — June 12, 2019</span>
+                </span>
+                <a href="#">WORLD</a>
+                <h2>Facebook finally faces GDPR lawsuit after getting shot down in Austrian court</h2>
+                <span class="meta-info">
+                    <span class="author">by <a href="#">Már Másson Maack</a></span>
+                    <span class="publish-time"><!--clock icon--> 2 hours ago</span>
+                    <span class="shares"><!--Share icon-->3</span>
+                </span>
+            </div>
+            <div class="span-3-9">
+                <a href="#">Insights</a>
+                <h3>Insurance firm Legal & General adopts Amazon’s blockchain for pension deals</h3>
+                <span class="meta-info">
+                    <span class="author">by <a href="#">Yessi Bello Perez</a></span>
+                    <span class="publish-time"><!--clock icon--> 3 hours ago</span>
+                    <span class="shares"><!--Share icon-->1</span>
+                </span>
+            </div>
+            <div class="span-3-9">
+                <a href="#">Insights</a>
+                <h3>9 days until the crypto industry must verify the identity of anyone sending $1,000 or more</h3>
+                <span class="meta-info">
+                    <span class="author">by <a href="#">David Canellis</a></span>
+                    <span class="publish-time"><!--clock icon--> 5 hours ago</span>
+                    <span class="shares"><!--Share icon-->2</span>
+                </span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
