Style added-incomplete

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>The Next Web - clone</title>
 </head>
 <body>
   <main>
     <div class="wrapper">
       <nav>
+        <span><img src="#" alt="Logo"></span>
         <ul>
           <li><a href="#">LATEST</a></li>
           <li><a href="#">HARD FORK</a></li>
@@ -35,25 +37,27 @@
           </span>
           </div>
           <div class="span-4-12">
-              <a href="#">Insights</a>
-              <h3>Insurance firm Legal & General adopts Amazon’s blockchain for pension deals</h3>
-              <span class="meta-info">
-                  <span class="author">by <a href="#">Yessi Bello Perez</a></span>
-                  <span class="publish-time"><!--clock icon--> 3 hours ago</span>
-                  <span class="shares"><!--Share icon-->1</span>
-              </span>
-          </div>
-          <div class="span-4-12">
-              <a href="#">Insights</a>
-              <h3>9 days until the crypto industry must verify the identity of anyone sending $1,000 or more</h3>
-              <span class="meta-info">
-                  <span class="author">by <a href="#">David Canellis</a></span>
-                  <span class="publish-time"><!--clock icon--> 5 hours ago</span>
-                  <span class="shares"><!--Share icon-->2</span>
-              </span>
+              <div>
+                <a href="#">Insights</a>
+                <h3>Insurance firm Legal & General adopts Amazon’s blockchain for pension deals</h3>
+                <span class="meta-info">
+                    <span class="author">by <a href="#">Yessi Bello Perez</a></span>
+                    <span class="publish-time"><!--clock icon--> 3 hours ago</span>
+                    <span class="shares"><!--Share icon-->1</span>
+                </span>
+              </div>
+              <div>
+                <a href="#">Insights</a>
+                <h3>9 days until the crypto industry must verify the identity of anyone sending $1,000 or more</h3>
+                <span class="meta-info">
+                    <span class="author">by <a href="#">David Canellis</a></span>
+                    <span class="publish-time"><!--clock icon--> 5 hours ago</span>
+                    <span class="shares"><!--Share icon-->2</span>
+                </span>
+            </div>
           </div>
       </div>
-      <div class="latest-news">
+      <div class="latest-news boxed">
         <h2>Latest News ></h2>
         <div class="wrapper">
           <div class="span-3-12">
@@ -138,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="latest-funding">
+      <div class="latest-funding boxed">
         <span>
           <h4>Latest Funding rounds on Index.co</h4>
           <span><a href="#">See more</a>  |  <a href="#">Get updates by email</a>  |  <a href="#">See more</a></span>
@@ -220,28 +224,10 @@
               </span>
             </div>
           </div>
-          <div class="span-3-12">
-            <div class="header">
-              <h4>SignalFx</h4>
-              <p><span>$75M</span><br>Series E</p>
-            </div>
-            <div class="meta-data">
-              <span class="tag">
-                <!-- Tag Icon -->
-                Sass +7
-              </span>
-              <span class="adress">
-                <!-- Adress Icon -->
-                Andreessen Horowitz, +3
-              </span>
-              <span class="description">
-                SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
-              </span>
-            </div>
-          </div>
         </div>
       </div>
-      <div class="categories">
+      <div class="categories boxed">
+          <div class="wrapper">
         <div class="span-4-12">
           <h3>Apps ></h3>
           <div class="category-article">
@@ -448,9 +434,15 @@
               <li><a href="#">Microsoft seems very proud of its smart contract auditing tools for blockchain</a></li>
             </ul>
           </div>
+        </div>
         </div>
       </div>
-      <div class="latest-deals">
+      <div class="latest-deals boxed">
+          <span>
+                <h3>Latest Deals</h3>
+                <span><a href="#">See all deals</a></span>
+          </span>
+        <div class="wrapper">  
         <div class="deal span-3-12">
           <a href="#"></a>
           <span class="deal-data">
@@ -506,6 +498,7 @@
             <h5>The Complete Salesforce Lightning Certification Training Bundle</h5>
             <span><span class="past-deal">$796</span>$19</span>
           </span>
+        </div>
         </div>
       </div>
       <footer>
