style fixes - Latest Funding

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/3a7b6dc568.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Oswald&display=swap" rel="stylesheet"> 
     <title>The Next Web - clone</title>
 </head>
 <body>
@@ -156,14 +157,16 @@
               <p><span>$75M</span><br>Series E</p>
             </div>
             <div class="meta-data">
-              <span class="tag">
-                <!-- Tag Icon -->
-                Sass +7
+              <div class="tag">
+              <span>
+                <i class="fas fa-tag"></i>
+                 Sass +7 <br>
               </span>
               <span class="adress">
-                <!-- Adress Icon -->
-                Andreessen Horowitz, +3
+                <i class="fas fa-briefcase"></i>
+                 Andreessen Horowitz, +3 <br>
               </span>
+            </div>
               <span class="description">
                 SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
               </span>
@@ -175,14 +178,16 @@
               <p><span>$75M</span><br>Series E</p>
             </div>
             <div class="meta-data">
-              <span class="tag">
-                <!-- Tag Icon -->
-                Sass +7
-              </span>
-              <span class="adress">
-                <!-- Adress Icon -->
-                Andreessen Horowitz, +3
-              </span>
+                <div class="tag">
+                    <span>
+                      <i class="fas fa-tag"></i>
+                       Sass +7 <br>
+                    </span>
+                    <span class="adress">
+                      <i class="fas fa-briefcase"></i>
+                       Andreessen Horowitz, +3 <br>
+                    </span>
+                </div>
               <span class="description">
                 SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
               </span>
@@ -194,14 +199,16 @@
               <p><span>$75M</span><br>Series E</p>
             </div>
             <div class="meta-data">
-              <span class="tag">
-                <!-- Tag Icon -->
-                Sass +7
-              </span>
-              <span class="adress">
-                <!-- Adress Icon -->
-                Andreessen Horowitz, +3
-              </span>
+                <div class="tag">
+                    <span>
+                      <i class="fas fa-tag"></i>
+                       Sass +7 <br>
+                    </span>
+                    <span class="adress">
+                      <i class="fas fa-briefcase"></i>
+                       Andreessen Horowitz, +3 <br>
+                    </span>
+              </div>
               <span class="description">
                 SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
               </span>
@@ -213,14 +220,16 @@
               <p><span>$75M</span><br>Series E</p>
             </div>
             <div class="meta-data">
-              <span class="tag">
-                <!-- Tag Icon -->
-                Sass +7
-              </span>
-              <span class="adress">
-                <!-- Adress Icon -->
-                Andreessen Horowitz, +3
-              </span>
+                <div class="tag">
+                    <span>
+                      <i class="fas fa-tag"></i>
+                       Sass +7 <br>
+                    </span>
+                    <span class="adress">
+                      <i class="fas fa-briefcase"></i>
+                       Andreessen Horowitz, +3 <br>
+                    </span>
+              </div>
               <span class="description">
                 SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
               </span>
