Thumbnail Image fix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <main>
+    <!--
     <div class="wrapper">
       <nav>
         <span><img src="#" alt="Logo"></span>
@@ -34,8 +35,8 @@
           <h1>Facebook finally faces GDPR lawsuit after getting shot down in Austrian court</h1>
           <span class="meta-info">
             <span class="author">by <a href="#">Már Másson Maack</a></span>
-            <span class="publish-time"><!--clock icon--> 2 hours ago</span>
-            <span class="shares"><!--Share icon-->3</span>
+            <span class="publish-time"><--clock icon-> 2 hours ago</span>
+            <span class="shares"><--Share icon->3</span>
           </span>
           </div>
           <div class="span-4-12">
@@ -44,8 +45,8 @@
                 <h2>Insurance firm Legal & General adopts Amazon’s blockchain for pension deals</h2>
                 <span class="meta-info">
                     <span class="author">by <a href="#">Yessi Bello Perez</a></span>
-                    <span class="publish-time"><!--clock icon--> 3 hours ago</span>
-                    <span class="shares"><!--Share icon-->1</span>
+                    <span class="publish-time"><!--clock icon-> 3 hours ago</span>
+                    <span class="shares"><!--Share icon->1</span>
                 </span>
               </div>
               <div>
@@ -53,13 +54,13 @@
                 <h2>9 days until the crypto industry must verify the identity of anyone sending $1,000 or more</h2>
                 <span class="meta-info">
                     <span class="author">by <a href="#">David Canellis</a></span>
-                    <span class="publish-time"><!--clock icon--> 5 hours ago</span>
-                    <span class="shares"><!--Share icon-->2</span>
+                    <span class="publish-time"><!--clock icon-> 5 hours ago</span>
+                    <span class="shares"><!--Share icon->2</span>
                 </span>
             </div>
           </div>
       </div>
-
+    -->
       <div class="latest-news boxed">
         <h3>Latest News ></h3>
         <div class="wrapper">
@@ -167,9 +168,9 @@
                  Andreessen Horowitz, +3 <br>
               </span>
             </div>
-              <span class="description">
+              <div class="description">
                 SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
-              </span>
+              </div>
             </div>
           </div>
           <div class="span-3-12">
@@ -188,9 +189,9 @@
                        Andreessen Horowitz, +3 <br>
                     </span>
                 </div>
-              <span class="description">
-                SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
-              </span>
+                <div class="description">
+                    SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
+                </div>
             </div>
           </div>
           <div class="span-3-12">
@@ -209,9 +210,9 @@
                        Andreessen Horowitz, +3 <br>
                     </span>
               </div>
-              <span class="description">
-                SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
-              </span>
+              <div class="description">
+                  SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
+              </div>
             </div>
           </div>
           <div class="span-3-12">
@@ -230,9 +231,9 @@
                        Andreessen Horowitz, +3 <br>
                     </span>
               </div>
-              <span class="description">
-                SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
-              </span>
+              <div class="description">
+                  SignalFx raises $75 million to monitor cloud apps, services, and environments in real time <a href="#">on VentureBeat</a>
+              </div>
             </div>
           </div>
         </div>
@@ -248,9 +249,13 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
+            <div>
+                <h5>LATEST</h5>
+                <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+            </div>
+            <a href="#">
+              <div> </div>
+            </a>
           </div>
           <div class="category-related">
             <ul>
@@ -271,9 +276,13 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
           </div>
           <div class="category-related">
             <ul>
@@ -294,10 +303,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -317,10 +330,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -340,10 +357,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -363,10 +384,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -386,10 +411,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -409,10 +438,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
@@ -432,10 +465,14 @@
             <span class="publish-time">13 hours ago</span>
           </div>
           <div class="category-latest">
-            <h5>LATEST</h5>
-            <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
-            <a href="#"></a>
-          </div>
+              <div>
+                  <h5>LATEST</h5>
+                  <span>The new Dropbox redesign turns the app into a productivity launchpad</span>
+              </div>
+              <a href="#">
+                <div> </div>
+              </a>
+            </div>
           <div class="category-related">
             <ul>
               <li><a href="#">Facebook revives its mobile data gathering program with a new app</a></li>
